--- a/actividad3.html
+++ b/actividad3.html
@@ -24,76 +24,67 @@
       <h2>Conectar</h2>
       <p class="texto">
          Camino a casa desde la escuela, Sam y Sara se detienen en los juegos. Sam y Sara se sientan en el balancín
-         y advierten que ese día algo es diferente: no suben ni bajan. 
+         y advierten que ese día algo es diferente: no suben ni bajan.
          <br><br>
-         Sara permanece abajo y Sam permanece arriba. No importa lo fuerte que Sara intenta empujar desde el suelo: 
+         Sara permanece abajo y Sam permanece arriba. No importa lo fuerte que Sara intenta empujar desde el suelo:
          ella no puede subir y Sam no puede bajar. Ambos se preguntan qué es diferente ese dÍa de cualquier otro.
-      </p>  
-      <p class="img_centrada"><img src="img/actividad3/3-1.png" width="70%" alt=""></p> 
+      </p>
+      <p class="img_centrada"><img src="img/actividad3/3-1.png" width="70%" alt=""></p>
       <p class="texto">
          ¿Puedes ayudar a Sam y Sara a construir un balancín que sube y baja? ¡Veamos cómo se hace!
-      </p>  
+      </p>
       <h2>Construir</h2>
       <p class="texto">
          Construye el balancín utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
-      </p>  
+      </p>
       <p class="img_centrada">
          <a title="Balancín" href="https://funtechacademy.github.io/lego-tempranas/pdf/balancin.pdf" target="_blank">
             <img src="img/actividad3/3-2.png" width="70%" alt="">
          </a>
       </p>
-      <p class="texto">     
+      <p class="texto">
          • Asegúrate de que mantiene el equilibrio y sube y baja con suavidad
          <br><br>
          • Si no mantiene el equilibrio comprueba que el pivote esté en la posición correcta
          <br><br>
          • Si no se mueve suavemente, comprueba que las poleas amarillas no hagan fricción contra los ladrillos rojos
-         fijos   
+         fijos
       </p>
-      <h2>Contemplar</h2> 
-      <p class="texto">    
+      <h2>Contemplar</h2>
+      <p class="texto">
          ¿Equilibrio o Desequilibrio?
-         <br><br>     
+         <br><br>
          Si agregas peso (2x2 ladrillos) al balancín, mantendrá el equilibrio o se inclinará hacia uno de los dos lados.
-         <br><br>     
+         <br><br>
          Averigua y predice qué balancín mantendrá el equilibrio y cuál no.
-         <br><br>     
+         <br><br>
          A continuación, prueba las distintas posiciones de los ladrillos.
-         <br><br>  
+         <br><br>
          El equilibrio del balancín depende del tamaño del peso (masa) en cada extremo y la distancia del peso desde
          el punto de pivote.
       </p>
-
-
-      <p class="img_centrada"><img src="img/actividad3/3-3.png" width="50%" alt=""></p>   
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas Como:</h3>
-      <p class="texto">    
+      <p class="img_centrada"><img src="img/actividad3/3-3.png" width="50%" alt=""></p>
+      <h2>Reflexionar</h2>
+      <p class="texto">
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+          <br><br>
          • ¿Qué has predicho que ocurriría y por qué?
-          <br><br>  
-         • Describe lo que ha ocurrido. 
-         <br><br>  
+          <br><br>
+         • Describe lo que ha ocurrido.
+         <br><br>
          • ¿Ha sido esta una prueba imparcial?
-         <br><br>  
-         • Describe cómo funciona el modelo.
+         <br><br>
+         • Describe cómo funciona el modelo.
       </p>
-      <h2>Continuar</h2>
-      <h3>¿Equilibrio con un Ladrillo?</h3>
-      <p class="texto">    
+      <h2>Reto</h2>
+      <p class="texto">
+         ¿Equilibrio con un ladrillo?
+         <br><br>
          Intenta predecir primero dónde colocar el ladrillo para hacer que el balancín mantenga el equilibrio.
-         <br><br>          
+         <br><br>
          A continuación, prueba a ver si lo que ocurre es lo que has predicho.
-         <br><br>  
-         En la hoja de trabajo, dibuja dónde colocarías el ladrillo para que el balancín mantenga el equilibrio.
       </p>
-      <p class="img_centrada"><img src="img/actividad3/3-4.png" width="50%" alt=""></p>   
-      <p class="img_centrada"><img src="img/actividad3/3-5.png" width="50%" alt=""></p>   
-     
-      <h2>Balancín</h2>
-      <h3>¿Equilibrio o Desequilibrio?</h3>  
-      <p class="img_centrada"><img src="img/actividad3/3-6.png" width="50%" alt=""></p> 
-      <h3>¿Equilibrio con un Ladrillo?</h3>    
-      <p class="img_centrada"><img src="img/actividad3/3-7.png" width="50%" alt=""></p>  
-      <p class="img_centrada"><img src="img/actividad3/3-8.png" width="50%" alt=""></p>          
+      <p class="img_centrada"><img src="img/actividad3/3-4.png" width="50%" alt=""></p>
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
