--- a/actividad4.html
+++ b/actividad4.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div id="cabecera">
-      <h1>Balancín</h1>
+      <h1>Balsa</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
@@ -23,98 +23,111 @@
    <div id="contenido">
       <h2>Conectar</h2>
       <p class="texto">
-         Los capitanes Sam y Sara son peligrosos piratas camino a la isla del tesoro.
-         <br><br>
-         Van a enterrar sus preciados tesoros de plata y oro.
+         Los capitanes Sam y Sara son peligrosos piratas camino de la isla del tesoro. Van a enterrar sus preciados 
+         tesoros de plata y oro.
          <br><br>
          Deben darse prisa para que nadie los vea, ya que no quieren que nadie les robe su botín.
          <br><br>       
          Pero los capitanes Sam y Sara, y su infame balsa no van muy rápido. Sam sopla la vela para hacer que la balsa
          navegue más rápido. Sara dice que necesitarán darse prisa para que nadie los vea.
-         <br><br>
-         <strong>¿Puedes ayudar a Sam y Sara a hacer que su balsa navegue más rápido? ¡Veamos cómo se hace!</strong>
       </p>  
-      <p class="img_centrada"><img src="img/actividad4/4-1.png" width="50%" alt=""></p> 
-      
-
+      <p class="img_centrada"><img src="img/actividad4/4-1.png" width="70%" alt=""></p> 
+      <p class="texto">
+         ¿Puedes ayudar a Sam y Sara a hacer que su balsa navegue más rápido? ¡Veamos cómo se hace!
+      </p>  
       <h2>Construir</h2>
-      <h3>Construye la Balsa Utilizando las Instrucciones no 4</h3>
-      <p class="img_centrada"><img src="img/actividad4/4-2.png" width="50%" alt=""></p> 
       <p class="texto">
-         • Llena la bañera
-         <br><br>
-         • La bañera debe tener un mínimo de 50 cm de largo
-         <br><br>
-         • El agua debe ser lo suficientemente profunda como para que flote la balsa. Entre 5 y 10 cm de profundidad
-         es lo ideal
-         <br><br>
-         • Coloca con cuidado la balsa en el agua
-         <br><br>
-         • La balsa debe tener espacio suficiente para flotar sin golpear el fondo y los lados de la bañera
+         Construye la balsa utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+      </p>  
+      <p class="img_centrada">
+         <a title="Balsa" href="https://funtechacademy.github.io/lego-tempranas/pdf/balsa.pdf" target="_blank">
+            <img src="img/actividad4/4-2.png" width="50%" alt="">
+         </a>
       </p>
-      <p class="img_centrada"><img src="img/actividad4/4-3.png" width="50%" alt=""></p> 
-      <h2>Contemplar</h2>
-      <h3>¿Rápido o más Rápido?</h3>
       <p class="texto">
-         Sopla o haz olas con la tapa de la caja, como un "fabricante de vientos". Averigua qué vela hace que tu balsa
-         navegue más rápido.
-         <br><br>         
-         Predice primero cuál de las balsas navegará rápido y cuál navegará más rápido. Escribe tus predicciones
-         utilizando las palabras de la hoja de trabajo.
+         ¿Te atreves a ponerle ruedas para ver como funciona? Para ello, vamos a seguir los siguientes pasos:
          <br><br>
-         A continuación, prueba la balsa con la vela pequeña y después, con la vela grande. Escribe tus hallazgos
-         utilizando las palabras de la hoja de trabajo.
+         • Montaremos tres ruedas.
+      </p>
+      <p class="texto">
+      <p class="img_centrada"><img src="img/actividad4/4-3.png" width="20%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-4.png" width="20%" alt=""></p> 
+      <p class="texto">
+         • Le añadiremos un eje a cada una.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-5.png" width="20%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-6.png" width="20%" alt=""></p> 
+      <p class="texto">
+         • Insertaremos una de las ruedas con el eje en un ladrillo rojo con agujeros laterales de 10x2 y lo sujetamos 
+           con una pieza amarilla por el otro lado del bloque.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-7.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-8.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-9.png" width="50%" alt=""></p> 
+      <p class="texto">
+         • Montamos otra vez la misma pieza pero de forma simétrica.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-10.png" width="50%" alt=""></p> 
+      <p class="texto">
+         • A la rueda que nos sobra, le montamos una pieza amarilla por cada lado del eje.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-11.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-12.png" width="50%" alt=""></p> 
+      <p class="texto">
+         • Esa tercera rueda la montaremos entre las dos piezas anteriores.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-13.png" width="50%" alt=""></p> 
+      <p class="texto">
+         • El montaje completo lo colocaremos debajo de la balsa para simular que navega.
+      </p>
+      <p class="img_centrada"><img src="img/actividad4/4-14.png" width="50%" alt=""></p> 
+      <h2>Contemplar</h2>
+      <p class="texto">
+         ¿Rápido o más Rápido?
+         <br><br>         
+         Sopla o utiliza algún objeto como la tapa de la caja, como un "fabricante de vientos". Averigua qué vela 
+         hace que tu balsa navegue más rápido.
+         <br><br>         
+         Predice primero cuál de las balsas navegará rápido y cuál navegará más rápido.
+         <br><br>
+         A continuación, prueba la balsa con la vela pequeña y después, con la vela grande.
          <br><br>
          La vela grande tiene más superficie para capturar la fuerza del viento. El viento empuja la vela, haciendo
          que la balsa se desplace hacia delante.   
       </p>
-      <p class="img_centrada"><img src="img/actividad4/4-4.png" width="50%" alt=""></p> 
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas como:</h3>
+      <h2>Reflexionar</h2>
       <p class="texto">
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+         <br><br>
          • ¿Que has predicho que ocurriría y por qué?
          <br><br>
          • Describe lo que ha ocurrido.
          <br><br>
          • ¿Cómo te aseguraste de que las pruebas fueran imparciales?
          <br><br>
-         ¿Has soplado o hecho olas a la misma velocidad? ¿Has soplado o hecho olas desde la misma posición?
+         ¿Has soplado o hecho viento a la misma velocidad? ¿Has soplado o hecho viento desde la misma posición?
          <br><br>
          • Describe cómo funciona el modelo.
          <br><br>
          • Si pudieras mejorar tres cosas en tu balsa, ¿cuáles serían y por qué?
       </p>
-      <p class="nota">  
-         Sugerencia:
-         <br><br>
-         Al hacer cambios en la balsa, es una buena idea secarla antes con una toalla. El agua acumulada en la balsa
-         puede afectar su flotabilidad.
-      </p>
-      <p class="nota">     
-         ¿Sabías que...?
-         <br><br>
-         El aire atrapado bajo los ladrillos LEGO® DUPLO® los hace flotar. Si el aire se escapa, la balsa se hunde.
-      </p>
-      <h2>Continuar</h2>
-      <h3>¿Puedes diseñar y fabricar una vela nueva?</h3>
+      <h2>Retos</h2>
       <p class="texto">
+         ¿Puedes diseñar y fabricar una vela nueva?
+         <br><br>
          Utiliza tu imaginación para diseñar tu propia vela para la balsa.
          <br><br>
          Diseña velas de diferentes formas y prueba cómo funcionan. Considera qué materiales serían los mejores. Crea
          entonces unas velas bonitas y coloridas.
-         <br><br>
-         En la hoja de trabajo, dibuja tu mejor diseño de vela.
       </p>
-      <p class="img_centrada"><img src="img/actividad4/4-5.png" width="50%" alt=""></p> 
-      <p class="img_centrada"><img src="img/actividad4/4-6.png" width="50%" alt=""></p> 
-      <h3>Opción: Construye tu propia balsa</h3>
+      <p class="img_centrada"><img src="img/actividad4/4-15.png" width="40%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad4/4-16.png" width="40%" alt=""></p> 
       <p class="texto">
-         Puedes construir una balsa que transporte montones de plata y oro, ¿sin hundirse?
+         ¿Eres capaz de construir tu propia balsa?
+         <br><br>
+         Puedes construir una balsa que transporte montones de plata y oro.
       </p>
-      <h2>Balsa</h2>
-      <h3>¿Rápido o más Rápido?</h3>  
-      <p class="img_centrada"><img src="img/actividad4/4-7.png" width="50%" alt=""></p> 
-      <h3>¿Puedes Hacer una Vela Nueva?</h3>    
-      <p class="img_centrada"><img src="img/actividad4/4-8.png" width="50%" alt=""></p>          
+      <p class="img_centrada"><img src="img/actividad4/4-17.png" width="40%" alt=""></p> 
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
