--- a/actividad5.html
+++ b/actividad5.html
@@ -23,51 +23,61 @@
    <div id="contenido">
       <h2>Conectar</h2>
       <p class="texto">
-         Sam y Sara están se están divertiendo mucho lanzándose colina abajo con su carro coche rápido. La colina
+         Sam y Sara están se están divertiendo mucho lanzándose colina abajo con su coche rápido. La colina
          detrás de la casa forma una gran rampa, y es muy divertido desplazarse cuesta abajo y sentir la emoción en
          el cuerpo.
          <br><br>
          Una vez que el coche se ha detenido, es difícil empujarlo de nuevo hasta arriba. Sara cree que debe haber una
-         forma mucho más fácil de subir el carro que empujarlo hasta arriba. A Sam le gustaría poder lanzar a Sara y
+         forma mucho más fácil de subir el coche que empujarlo hasta arriba. A Sam le gustaría poder lanzar a Sara y
          el coche cuesta arriba. ¡Sería fantástico!
-         <br><br>         
-         <strong>¿Puedes ayudar a Sam y Sara a construir un lanzador que pueda lanzar el coche cuesta arriba por la colina?
-         ¡Veamos cómo se hace!</strong>
       </p>  
-      <p class="img_centrada"><img src="img/actividad5/5-1.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad5/5-1.png" width="70%" alt=""></p> 
+      <p class="texto">
+         ¿Puedes ayudar a Sam y Sara a construir un lanzador que pueda lanzar el coche cuesta arriba por la colina?
+         ¡Veamos cíomo se hace!
+      </p>  
       <h2>Construir</h2>
-      <h3>Construye el coche y el lanzador utilizando las instrucciones de montaje no 5</h3>
       <p class="texto">
-          • Asegúrate de que las ruedas giren libremente y no rocen contra los bordes del carro
+          Construye el coche y el lanzador utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
       </p> 
-      <p class="img_centrada"><img src="img/actividad5/5-2.png" width="50%" alt=""></p> 
-      <h3>Haz tu colina de pruebas</h3>
+      <p class="img_centrada">
+         <a title="Lanzador de Coches" href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzacoches.pdf" target="_blank">
+            <img src="img/actividad5/5-2.png" width="80%" alt="">
+         </a>
+      </p>
       <p class="texto">
-         • Coloca la plancha sobre algunos libros de modo que uno de los extremos quede situado 20 cm mas arriba que 
+          • Asegúrate de que las ruedas giren libremente y no rocen contra los bordes del coche.
+      </p> 
+      <p class="texto">
+         Haz tu colina de pruebas:
+         <br><br>    
+         • Coloca una base sobre algún objeto de modo que uno de los extremos quede situado a unos 20 cm mas alto que 
          el suelo
          <br><br>    
          • Coloca el lanzador y sostenlo en la parte inferior de la rampa
       </p>
-      <p class="img_centrada"><img src="img/actividad5/5-3.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad5/5-3.png" width="60%" alt=""></p> 
       <h2>Contemplar</h2>
-      <h3>¿Lejos o más Lejos?</h3>
       <p class="texto">
+         ¿Lejos o más Lejos?
+         <br><br>       
          Utilizando los dos lanzadores podrías enviar el coche hacia arriba por la rampa.
          <br><br>       
-         Averigua cuál enviará al carro más lejos.
+         Averigua cuál enviará al coche más lejos.
          <br><br>    
-         Predice primero cual de los lanzadores enviará el carro lejos en la rampa y cuál lo enviará aún más arriba en
-         la rampa. Escribe tus predicciones utilizando las palabras de la hoja de trabajo.
+         Predice primero cual de los lanzadores enviará el coche lejos en la rampa y cuál lo enviará aún más arriba en
+         la rampa.
          <br><br>    
-         A continuación, comprueba lo lejos que puedes lanzar el carro utilizando primero el lanzador pequeño y después
-         el grande. Escribe tus hallazgos utilizando las palabras de la hoja de trabajo.
+         A continuación, comprueba lo lejos que puedes lanzar el coche utilizando primero el lanzador pequeño y 
+         después el grande.
          <br><br>   
          El eje más largo del lanzador grande implica más tiempo para alcanzar velocidad y energía en el lanzamiento.
          Mas energía implica mayor distancia.
       </p>
-      <p class="img_centrada"><img src="img/actividad5/5-4.png" width="50%" alt=""></p>  
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas como:</h3>
+      <h2>Reflexionar</h2>
       <p class="texto"> 
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+         <br><br>   
          • ¿Qué has predicho que ocurriría y por qué?
          <br><br>   
          • Describe lo que ha ocurrido.
@@ -79,30 +89,21 @@
          • Describe cómo funciona el modelo.
       </p>
       <p class="nota">  
-         Sugerencia:
-         <br><br>   
-         ¿Cuán cerca?
-         <br><br>   
-         Utiliza una regla para realizar medidas estándar de la distancia que recorre el coche.
+         <strong>Sugerencia</strong>: ¿Hasta donde llega? Utiliza una regla para realizar medidas de la distancia que 
+         recorre el coche.
       </p>
-      <h2>Continuar</h2>
-      <h3>¿Cuán cerca?</h3>
+      <h2>Reto</h2>
       <p class="texto">
-         Haz un juego para ver quién puede lanzar sus carros más cerca de una pared sin que lleguen a tocarla.
+         ¿Hssta dónde eres capaz de lanzar el coche?
          <br><br>   
-         ¡Cuanto más cerca de la pared se detenga tu carro, más puntos conseguirás! Anota tus puntajes en la hoja de
-         trabajo.
+         Haz un juego para ver quién puede lanzar sus coches más cerca de una pared sin que lleguen a tocarla.
+         <br><br>   
+         ¡Cuanto más cerca de la pared se detenga tu coche, más puntos conseguirás! Anota tus puntajes.
          <br><br>  
-         ¿Cómo puedes hacer el juego justo? Todos los carros son lanzados desde la misma posición de partida. Todos
+         ¿Cómo puedes hacer el juego justo? Todos los coches son lanzados desde la misma posición de partida. Todos
          los participantes tienen tres turnos. Suma los puntajes después de tres turnos, etc.
       </p>
-      <p class="img_centrada"><img src="img/actividad5/5-5.png" width="50%" alt=""></p>    
-      <h2>Lanzador de Coches</h2>
-      <h3>¿Lejos o más Lejos?</h3>  
-      <p class="img_centrada"><img src="img/actividad5/5-6.png" width="50%" alt=""></p> 
-      <h3>¿Cuán cerca?</h3>    
-      <p class="img_centrada"><img src="img/actividad5/5-7.png" width="50%" alt=""></p>  
-      <p class="img_centrada"><img src="img/actividad5/5-8.png" width="50%" alt=""></p>         
+      <p class="img_centrada"><img src="img/actividad5/5-4.png" width="70%" alt=""></p>    
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
