--- a/actividad6.html
+++ b/actividad6.html
@@ -29,106 +29,103 @@
          <br><br>
          Sam dice que no parece estar lejos de donde están. Sam estira una cinta métrica y quiere empezar a medir,
          pero Sara cree que tiene que existir una forma mucho mejor de medir la distancia.
-         <br><br>         
-         <strong>¿Puedes ayudar a Sam y Sara a construir un carro que mida la distancia recorrida? ¡Veamos cómo se hace!</strong>
-      </p>  
-      <p class="img_centrada"><img src="img/actividad6/6-1.png" width="50%" alt=""></p> 
+      </p>
+      <p class="img_centrada"><img src="img/actividad6/6-1.png" width="70%" alt=""></p>
+      <p class="texto">
+         ¿Puedes ayudar a Sam y Sara a construir un coche que mida la distancia recorrida? ¡Veamos cómo se hace!</strong>
+      </p>
       <h2>Construir</h2>
-      <h3>Construye el Coche de Medida Utilizando las Instrucciones no 6</h3>
-      <p class="texto">  
+      <p class="texto">
+         Construye el coche de medida utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+      </p>
+      <p class="img_centrada">
+         <a title="Coche de Medida" href="https://funtechacademy.github.io/lego-tempranas/pdf/cochemedida.pdf" target="_blank">
+            <img src="img/actividad6/6-2.png" width="60%" alt="">
+         </a>
+      </p>
+      <p class="texto">
          • Las ruedas deben poder girar libremente y sin rozar con los bordes del coche
          <br><br>
-         • Cuando giran las ruedas del engranaje azul, el puntero también debe moverse
+         • Cuando giran las ruedas del engranaje azul, el puntero también debe moverse.
          <br><br>
          • El puntero no debe frotar contra la escala
       </p>
-      <p class="img_centrada"><img src="img/actividad6/6-2.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad6/6-3.png" width="50%" alt=""></p>
       <h3>Haz tu Rampa de Pruebas</h3>
-      <p class="texto">  
-         • Traza una línea inicial a 90 cm y después otra línea inicial a 50 cm desde un extremo de la plancha
+      <p class="texto">
+         • Traza una línea inicial a 90 cm y después otra línea inicial a 50 cm desde un extremo de la plancha.
          <br><br>
-         • Coloca un soporte de forma que la línea inicial superior se encuentre a 15 cm del suelo
+         • Coloca un soporte de forma que la línea inicial superior se encuentre a 15 cm del suelo.
       </p>
-      <p class="img_centrada"><img src="img/actividad6/6-3.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad6/6-4.png" width="50%" alt=""></p>
       <h3>Uso de la Escala</h3>
-      <p class="texto">  
-         • La escala está dividida en 10 unidades y se puede utilizar para realizar medidas no estándar
+      <p class="texto">
+         • La escala está dividida en 10 unidades y se puede utilizar para realizar medidas.
          <br><br>
-         • Empuja el coche de medida hacia delante
+         • Empuja el coche de medida hacia delante.
          <br><br>
-         • Observa que cuando el coche de medida se mueve hacia delante, el puntero gira
+         • Observa que cuando el coche de medida se mueve hacia delante, el puntero gira.
          <br><br>
-         • El puntero apuntará hacia la escala y te dará una lectura de la distancia (unidades) que el carro de medida
-          ha recorrido hacia delante
+         • El puntero apuntará hacia la escala y te dará una lectura de la distancia (unidades) que el coche de medida
+          ha recorrido hacia delante.
       </p>
-      <p class="img_centrada"><img src="img/actividad6/6-4.png" width="50%" alt=""></p> 
-      <p class="nota">  
-         Idea:
-         <br><br>  
-         Si el grosor de la plancha es demasiado grande y los coches chocan contra suelo, utiliza un trozo de papel o
-         cartulina y cinta adhesiva para lograr una transición suave de la plancha al suelo.
+      <p class="img_centrada"><img src="img/actividad6/6-5.png" width="50%" alt=""></p>
+      <p class="nota">
+         <strong>Idea</strong>: Si el grosor de la plancha es demasiado grande y los coches chocan contra suelo,
+         utiliza un trozo de papel o cartulina y cinta adhesiva para lograr una transición suave de la plancha al
+         suelo.
       </p>
       <h2>Contemplar</h2>
-      <h3>¿Cuán Lejos?</h3>
-      <p class="texto">             
+      <p class="texto">
+         ¿Qué distancia podemos medir?
+         <br><br>
          Utilizando la escala puedes medir la distancia que recorre el coche de medida. Averigua lo lejos que llegará
          el coche de medida al desplazarse hacia abajo desde las dos líneas iniciales diferentes.
-         <br><br>     
-         Predice primero cuánta distancia recorrerá el coche de medida desde las dos líneas iniciales. Marca tus
-         predicciones utilizando la escala y los números de la hoja de trabajo.
-         <br><br>  
+         <br><br>
+         Predice primero cuánta distancia recorrerá el coche de medida desde las dos líneas iniciales.
+         <br><br>
          A continuación, prueba cuánto se desplaza el coche de medida en realidad desde las dos lineas iniciales
-         leyendo la escala. Marca tus hallazgos utilizando la escala y los numeros de la hoja de trabajo.      
+         leyendo la escala.
       </p>
-      <p class="img_centrada"><img src="img/actividad6/6-5.png" width="50%" alt=""></p>    
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas como:</h3>
-      <p class="texto">   
+      <h2>Reflexionar</h2>
+      <p class="texto">
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+         <br><br>
          • ¿Qué has predicho que ocurriria y por qué?
-         <br><br>  
+         <br><br>
          • Describe lo que ha ocurrido.
-         <br><br>  
+         <br><br>
          • ¿Cómo te aseguraste de que tus pruebas fuesen imparciales?
-         <br><br>  
+         <br><br>
          ¿Has empezado siempre en el mismo lugar?
-         <br><br>  
-         ¿Has empujado el carro de medida cuando empezaba a descender por la rampa?
-         <br><br>  
+         <br><br>
+         ¿Has empujado el coche de medida cuando empezaba a descender por la rampa?
+         <br><br>
          ¿Has puesto el puntero a cero después de cada prueba?
-         <br><br>  
+         <br><br>
          • Describe cómo funciona el modelo.
       </p>
-      <p class="nota">  
-         Sugerencia:
-         <br><br>  
-         Recuerda poner el puntero a cero después de cada prueba girando las ruedas del engranaje azul hasta que el
-         puntero esté en la parte superior de la escala.
+      <p class="nota">
+         <strong>Sugerencia</strong>: Recuerda poner el puntero a cero después de cada prueba girando las ruedas del
+         engranaje azul hasta que el puntero esté en la parte superior de la escala.
       </p>
-      <h2>Continuar</h2>
-      <h3>¿Más Lejos?</h3>
-      <p class="texto">    
+      <h2>Reto</h2>
+      <p class="texto">
+         ¿Puedes llegar más lejos?
+         <br><br>
          Fabrica tu rampa de pruebas con 25 cm de altura y prueba como afecta el cambio a la distancia que recorre el
          coche de medida.
-         <br><br>  
-         Averigua lo lejos que llegara el carro de medida al desplazarse hacia abajo desde las dos líneas iniciales diferentes.
+         <br><br>
+         Averigua lo lejos que llegara el coche de medida al desplazarse hacia abajo desde las dos líneas iniciales
+         diferentes.
       </p>
       <p class="img_centrada"><img src="img/actividad6/6-6.png" width="50%" alt=""></p>
-      <p class="texto">        
+      <p class="texto">
          Predice primero qué distancia recorrera el coche de medida desde las dos líneas iniciales.
-         <br><br>  
-         Marca tus predicciones utilizando la escala y los números de la hoja de trabajo.
-         <br><br>  
+         <br><br>
          A continuación, comprueba cuánto se desplaza el coche de medida en realidad desde las dos líneas iniciales
          leyendo la escala.
-         <br><br>  
-         Marca tus hallazgos utilizando la escala y los números de la hoja de trabajo.
       </p>
-      <p class="img_centrada"><img src="img/actividad6/6-7.png" width="50%" alt=""></p>    
-      <h2>Coche de Medida</h2>
-      <h3>¿Cuán Lejos?</h3>  
-      <p class="img_centrada"><img src="img/actividad6/6-8.png" width="50%" alt=""></p> 
-      <h3>Más Lejos</h3>    
-      <p class="img_centrada"><img src="img/actividad6/6-9.png" width="50%" alt=""></p>  
-      <p class="img_centrada"><img src="img/actividad6/6-10.png" width="50%" alt=""></p>         
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
