--- a/actividad7.html
+++ b/actividad7.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div id="cabecera">
-      <h1>Jugador de Hockey Sobre Hielo</h1>
+      <h1>Jugador de Hockey</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
@@ -24,51 +24,60 @@
       <h2>Conectar</h2>
       <p class="texto">
          Sam es un gran jugador de hockey sobre hielo y Sara es muy buena en el ataque. Han organizado un partido de
-         hockey sobre hielo contra el mejor equipo de hockey de la escuela. 
+         hockey sobre hielo contra el mejor equipo de hockey de la escuela.
          <br><br>
          Sara cree que el mayor problema de su equipo es hacer los complicados tiros largos. Para ser invencibles,
-         Sara dice que todo lo que necesitan es tener un tercer miembro del equipo que esté en el centro del campo y 
+         Sara dice que todo lo que necesitan es tener un tercer miembro del equipo que esté en el centro del campo y
          que haga buenos tiros largos. ¡Sam cree que es una idea excelente!
-         <br><br>         
-         <strong>¿Puedes ayudar a Sam y Sara a construir un tercer miembro del equipo que se bueno en tiros largos?
-         ¡Veamos cómo se hace!</strong>
-      </p>  
-      <p class="img_centrada"><img src="img/actividad7/7-1.png" width="50%" alt=""></p> 
-      <h2>Construir</h2>
-      <h3>Construye el Jugador de Hockey sobre Hielo Utilizando las Instrucciones de Montaje no 7</h3>
-      <p class="texto">  
-         • Gira el asa situada en la parte trasera del jugador de hockey sobre hielo para asegurarte de que los brazos
-         se balanceen libremente
-         <br><br>
-         • Coloca una polea amarilla frente al brazo, gira el asa situada en la parte trasera y acciona la polea
-         <br><br>
-        • Si el brazo no acciona la polea, comprueba si lo has construido siguiendo las instrucciones de construcción
       </p>
-      <p class="img_centrada"><img src="img/actividad7/7-2.png" width="50%" alt=""></p> 
-      <p class="img_centrada"><img src="img/actividad7/7-3.png" width="50%" alt=""></p>    
+      <p class="img_centrada"><img src="img/actividad7/7-1.png" width="70%" alt=""></p>
+      <p class="texto">
+         ¿Puedes ayudar a Sam y Sara a construir un tercer miembro del equipo que se bueno en tiros largos?
+         ¡Veamos cómo se hace!
+      </p>
+      <h2>Construir</h2>
+      <p class="texto">
+         Construye el jugador de hockey sobre hielo utilizando las instrucciones. Picha sobre la imajen para acceder
+         a ellas.
+      </p>
+      <p class="img_centrada">
+         <a title="Jugador de Hockey Sobre Hielo" href="https://funtechacademy.github.io/lego-tempranas/pdf/hockey.pdf" target="_blank">
+            <img src="img/actividad7/7-2.png" width="50%" alt="">
+         </a>
+      </p>
+      <p class="texto">
+         • Gira el asa situada en la parte trasera del jugador de hockey sobre hielo para asegurarte de que los brazos
+         se balanceen libremente.
+         <br><br>
+         • Coloca una polea amarilla frente al brazo, gira el asa situada en la parte trasera y acciona la polea.
+         <br><br>
+         • Si el brazo no acciona la polea, comprueba si lo has construido siguiendo las instrucciones de construcción.
+      </p>
+      <p class="img_centrada"><img src="img/actividad7/7-3.png" width="50%" alt=""></p>
       <h3>Haz el Campo</h3>
-      <p class="texto">  
+      <p class="texto">
          • Mide y marca tus zonas de tiro a distancias de 30 y 50 cm
          <br><br>
-         • Haz un arco utilizando ladrillos
+         • Haz una portería utilizando los ladrillos sobrantes.
       </p>
-      <p class="img_centrada"><img src="img/actividad7/7-4.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad7/7-4.png" width="70%" alt=""></p>
       <h2>Contemplar</h2>
-      <h3>¿Fácil o Difícil?</h3>
-      <p class="texto">  
-         Marcar tantos a distancia puede ser difícil. Averigua el nivel de dificultad que tendria el jugador de hockey
+      <p class="texto">
+         ¿Fácil o Difícil?
+         <br><br>
+         Marcar goles a distancia puede ser difícil. Averigua el nivel de dificultad que tendria el jugador de hockey
          sobre hielo para marcar un tanto.
          <br><br>
          Predice primero a qué distancia sería fácil y a qué distancia sería difícil que el jugador de hockey sobre
-         hielo marcase un tanto. Escribe tus predicciones utilizando las palabras de la hoja de trabajo.
+         hielo marcase un tanto.
          <br><br>
-         A continuación, prueba qué difícil es marcar tantos desde ambas distancias. Escribe tus hallazgos utilizando
-         las palabras de la hoja de trabajo.
+         A continuación, prueba cómo es de difícil marcar goles desde ambas distancias.
       </p>
-      <p class="img_centrada"><img src="img/actividad7/7-5.png" width="50%" alt=""></p>  
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas como:</h3>
-      <p class="texto">  
-         • ¿Qué has predicho que ocurriria y por qué? 
+      <h2>Reflexionar</h2>
+      <p class="texto">
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+         <br><br>
+         • ¿Qué has predicho que ocurriria y por qué?
          <br><br>
          • Describe lo que ha ocurrido.
          <br><br>
@@ -77,26 +86,19 @@
          ¿El jugador de hockey sobre hielo lanzó siempre desde la misma posición?
          <br><br>
          • Describe cómo funciona el modelo.
-      </p>     
-      <h2>Continuar</h2>
-      <h3>¿Lejos o más Lejos?</h3>
-      <p class="texto">             
-         Averigua qué puede lanzarse más lejos: uno o dos ladrillos.
-         <br><br>     
-         Intenta primero predecir qué puede lanzarse lejos y qué puede lanzarse más lejos: uno o dos ladrillos.
-         <br><br>  
-         Escribe tus predicciones utilizando las palabras de la hoja de trabajo.  
-         <br><br>  
-         A continuación, prueba para ver si lo que ocurre es lo que has predicho.
-         <br><br>  
-         Escribe tus hallazgos utilizando las palabras de la hoja de trabajo. 
       </p>
-      <p class="img_centrada"><img src="img/actividad7/7-6.png" width="50%" alt=""></p>  
-      <h2>Jugador de Hockey sobre Hielo</h2>
-      <h3>¿Fácil o Difícil?</h3>  
-      <p class="img_centrada"><img src="img/actividad7/7-7.png" width="50%" alt=""></p> 
-      <h3>¿Lejos o más Lejos?</h3>    
-      <p class="img_centrada"><img src="img/actividad7/7-8.png" width="50%" alt=""></p>       
+      <h2>Retos</h2>
+      <p class="texto">
+         ¿Lejos o más Lejos?
+         <br><br>
+         Averigua qué puede lanzarse más lejos: uno o dos ladrillos.
+      </p>
+      <p class="img_centrada"><img src="img/actividad7/7-5.png" width="40%" alt=""></p>
+      <p class="texto">
+         Intenta primero predecir qué puede lanzarse lejos y qué puede lanzarse más lejos: uno o dos ladrillos.
+         <br><br>
+         A continuación, prueba para ver si lo que ocurre es lo que has predicho.
+      </p>
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
