--- a/actividad1.html
+++ b/actividad1.html
@@ -83,7 +83,7 @@
          • ¿Qué crees que es lo más importante para hacer un buen molinillo? Quizá el tamaño de las aspas, o cuántas
            son... o su forma, o quizá la velocidad del viento...
       </p>
-      <h2>Reto</h2>
+      <h2>Retos</h2>
       <p class="texto">
          ¿Puedes fabricar unas aspas nuevas para el molinillo?
         <br><br>
