--- a/actividad2.html
+++ b/actividad2.html
@@ -98,7 +98,7 @@
          amarillo tiene 40 dientes!
       </p>
       <p class="img_centrada"><img src="img/actividad2/2-5.png" width="20%" alt=""></p>
-      <h2>Reto</h2>
+      <h2>Retos</h2>
       <p class="texto">
          ¿Puedes Diseñar tu Propia Peonza?
          <br><br>
