--- a/actividad3.html
+++ b/actividad3.html
@@ -76,7 +76,7 @@
          <br><br>
          • Describe cómo funciona el modelo.
       </p>
-      <h2>Reto</h2>
+      <h2>Retos</h2>
       <p class="texto">
          ¿Equilibrio con un ladrillo?
          <br><br>
