--- a/actividad5.html
+++ b/actividad5.html
@@ -92,7 +92,7 @@
          <strong>Sugerencia</strong>: ¿Hasta donde llega? Utiliza una regla para realizar medidas de la distancia que
          recorre el coche.
       </p>
-      <h2>Reto</h2>
+      <h2>Retos</h2>
       <p class="texto">
          ¿Hssta dónde eres capaz de lanzar el coche?
          <br><br>
