--- a/actividad6.html
+++ b/actividad6.html
@@ -109,7 +109,7 @@
          <strong>Sugerencia</strong>: Recuerda poner el puntero a cero después de cada prueba girando las ruedas del
          engranaje azul hasta que el puntero esté en la parte superior de la escala.
       </p>
-      <h2>Reto</h2>
+      <h2>Retos</h2>
       <p class="texto">
          ¿Puedes llegar más lejos?
          <br><br>
