--- a/actividad8.html
+++ b/actividad8.html
@@ -9,11 +9,11 @@
    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Sanchez&display=swap" rel="stylesheet">
    <script src="js/scripts.js"></script>
-   <title>Actividad 8: El Perro Nuevo de Sam</title>
+   <title>Actividad 8: El Perro de Sam</title>
 </head>
 <body>
    <div id="cabecera">
-      <h1>El Perro Nuevo de Sam</h1>
+      <h1>El Perro de Sam</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
@@ -28,44 +28,50 @@
          llevar a pasear a Buddy para jugar juntos. ¡Todo eso va a cambiar, ahora que Buddy se muda!
          <br><br>
          Sara siente pena por Sam y decide alegrarle consiguiendo un nuevo perro con ojos divertidos para que Sam
-         juegue con él un amigo como Buddy.
-         <br><br>         
-         <strong>¿Puedes ayudar a Sara a construir algo parecido a Buddy con grandes ojos que se muevan? ¡Veamos
-         como se hace!</strong>
-      </p>  
-      <p class="img_centrada"><img src="img/actividad8/8-1.png" width="50%" alt=""></p> 
+         juegue con él.
+      </p>
+      <p class="img_centrada"><img src="img/actividad8/8-1.png" width="70%" alt=""></p>
+      <p class="texto">
+         ¿Puedes ayudar a Sara a construir algo parecido a Buddy con grandes ojos que se muevan? ¡Veamos como se hace!
+      </p>
       <h2>Construir</h2>
-      <h3>Construye el Perro Nuevo de Sam Utilizando las Instrucciones no 8</h3>
-      <p class="img_centrada"><img src="img/actividad8/8-2.png" width="50%" alt=""></p>
-      <p class="img_centrada"><img src="img/actividad8/8-3.png" width="50%" alt=""></p> 
-      <h3></h3>
-      <p class="texto">  
+      <p class="texto">
+         Construye el perro nuevo de Sam utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+      </p>
+      <p class="img_centrada">
+         <a title="Perro de Sam" href="https://funtechacademy.github.io/lego-tempranas/pdf/perro.pdf" target="_blank">
+            <img src="img/actividad8/8-2.png" width="50%" alt="">
+         </a>
+      </p>
+      <p class="texto">
          • Coloca los discos de los ojos en los ejes, como muestra la figura
           <br><br>
          • Cada uno de los ejes debe girar libremente
-         <br><br>
+      </p>
+      <p class="img_centrada"><img src="img/actividad8/8-3.png" width="60%" alt=""></p>
+      <p class="texto">
          • Si no es así, afloja las ruedas de la polea amarilla para que no rocen con la barra roja
       </p>
-      <p class="img_centrada"><img src="img/actividad8/8-4.png" width="50%" alt=""></p> 
+      <p class="img_centrada"><img src="img/actividad8/8-4.png" width="40%" alt=""></p>
       <h2>Contemplar</h2>
-      <h3>¿Igual u Opuesto?</h3>
-      <p class="texto">  
+      <p class="texto">
+         ¿Igual u Opuesto?
+         <br><br>
          Girando la nariz puedes hacer que giren los ojos del perro nuevo de Sam. Averigua cual de las configuraciones
          de la correa hace girar los ojos del perro en el mismo sentido o en sentido opuesto.
-         <br><br>
+      </p>
+      <p class="img_centrada"><img src="img/actividad8/8-5.png" width="40%" alt=""></p>
+      <p class="texto">
          Predice primero qué configuración de la correa hará que los ojos del perro giren en la misma dirección y
          cuál hará que los ojos del perro giren en dirección opuesta.
          <br><br>
-         Escribe tus predicciones utilizando las palabras de la hoja de trabajo.
-         <br><br>
          A continuación, prueba las dos configuraciones de la correa.
-         <br><br>
-         Escribe tus hallazgos utilizando las palabras de la hoja de trabajo.
       </p>
-      <p class="img_centrada"><img src="img/actividad8/8-5.png" width="50%" alt=""></p>   
-      <h3>Pida a los Niños que Reflexionen sobre sus Pruebas Preguntándoles Cosas como:</h3>
-      <p class="texto">  
-         • ¿Qué has predicho que ocurriria y por qué? 
+      <h2>Reflexionar</h3>
+      <p class="texto">
+         Pide a los niños que reflexionen sobre sus pruebas preguntándoles cosas como:
+         <br><br>
+         • ¿Qué has predicho que ocurriria y por qué?
          <br><br>
          • Describe lo que ha ocurrido.
          <br><br>
@@ -74,35 +80,25 @@
          ¿Has ajustado correctamente la correa?
          <br><br>
          • Describe cómo funciona el modelo.
-      </p>      
-      <h2>Continuar</h2>
-      <h3>¿Igual o Diferente?</h3>
-      <p class="texto">   
+      </p>
+      <h2>Retos</h2>
+      <p class="texto">
+         ¿Igual o Diferente?
+         <br><br>
          Cambia la configuración de la correa de la polea para cambiar la velocidad a la que giran los ojos del perro
-         nuevo de Sam. Averigua cual de las configuraciones de la correa hace girar los ojos del perro a la misma
+         de Sam. Averigua cual de las configuraciones de la correa hace girar los ojos del perro a la misma
          velocidad o a velocidades diferentes.
          <br><br>
          Predice primero qué configuración de la correa hará que los ojos del perro giren a la misma velocidad y cuál
          hará que los ojos del perro giren a velocidades diferentes.
          <br><br>
-         Escribe tus predicciones utilizando las palabras de la hoja de trabajo.
-         <br><br>
          A continuación, prueba si los resultados coinciden con tu predicción.
          <br><br>
-         Escribe tus hallazgos utilizando las palabras de la hoja de trabajo.
-      </p> 
-      <p class="img_centrada"><img src="img/actividad8/8-6.png" width="50%" alt=""></p>    
-      <h3>Opción: Adorna el Perro Nuevo de Sam</h3>
-      <p class="texto">  
          Adorna el perro nuevo de Sam para que parezca simpático, dulce o de buena onda.
          <br><br>
-         Puede que quieras ponerle orejas, una lengua o incluso un rabo utilizando distintos materiales, como tela, papel, etc.
-      </p> 
-      <h2>El Perro Nuevo de Sam</h2>
-      <h3>¿Igual u Opuesto?</h3>  
-      <p class="img_centrada"><img src="img/actividad8/8-7.png" width="50%" alt=""></p> 
-      <h3>¿Igual o Diferente?</h3>    
-      <p class="img_centrada"><img src="img/actividad8/8-8.png" width="50%" alt=""></p>       
+         Puede que quieras ponerle orejas, una pajarita, una lengua o incluso un rabo utilizando distintos materiales.
+      </p>
+      <p class="img_centrada"><img src="img/actividad8/8-6.png" width="50%" alt=""></p>
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
