--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <li><a href="actividad5.html">&emsp;Actividad 5: Lanzador de Coches</a></li>
          <li><a href="actividad6.html">&emsp;Actividad 6: Coche de Medida</a></li>
          <li><a href="actividad7.html">&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
-         <li><a href="actividad8.html">&emsp;Actividad 8: El Perro Nuevo de Sam</a></li>
+         <li><a href="actividad8.html">&emsp;Actividad 8: El Perro de Sam</a></li>
       </ul>
    </div>
    <div id="pie">
